Update and rename README.md to README.org

--- a/README.org
+++ b/README.org
@@ -1,6 +1,6 @@
   
 
-***They say human can never be perfect, so I make my machine work perfect.***
+*They say human can never be perfect, so I make my machine work perfect.*
 
 - 👋 Hi, you have found me!
 - 👀 I’m interested in Learning. I mean it in every way. My brain doesnt stop thinking or tinkering on my area of interests.
