--- a/README.org
+++ b/README.org
@@ -1,13 +1,12 @@
   
-
-*They say human can never be perfect, so I make my machine work perfect.*
+/*They say human can never be perfect, so I make my machine work perfect.*/
 
 - 👋 Hi, you have found me!
-- 👀 I’m interested in Learning. I mean it in every way. My brain doesnt stop thinking or tinkering on my area of interests.
+- 👀 I’m interested in Learning. I mean it in every way. My brain doesn't stop thinking or tinkering on my area of interests.
 - 🌱 I don't know any programming language.
 - 📗 I'm looking forward to learn and improve my functional workflow.
-- 💜 100% Emacs Lover. 
+- 💜 100% *Emacs* Lover. 
 - 🧠 Emacs is my Second Brain!
-- ❄️ NixOS User.
+- ❄️ *NixOS* User.
 
-Bookmark this, cause in future this will turn out to be alot improved!
+Bookmark this, cause in future this will turn out to be a lot improved!
