--- a/README.org
+++ b/README.org
@@ -1,5 +1,5 @@
   
-/*They say human can never be perfect, so I make my machine work perfect.*/
+/They say human can never be perfect, so I make my machine work perfect/.
 
 - 👋 Hi, you have found me!
 - 👀 I’m interested in Learning. I mean it in every way. My brain doesn't stop thinking or tinkering on my area of interests.
